# SikuliX1

.claude/: settings.local.json
rust/: .gitignore  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  OPENCV_INTEGRATION_STATUS.md  PHASE0_SUMMARY.md  README.md  pyproject.toml
rust/.cargo/: config.toml
rust/.github/workflows/: ci.yml
rust/crates/sikulix-core/: Cargo.toml
rust/crates/sikulix-core/src/: error.rs  image.rs  lib.rs  location.rs  pattern.rs  region.rs
rust/crates/sikulix-gui/: Cargo.toml
rust/crates/sikulix-gui/src/: main.rs
rust/crates/sikulix-platform/: Cargo.toml
rust/crates/sikulix-platform/src/: keyboard.rs  lib.rs  mouse.rs  screen.rs
rust/crates/sikulix-platform/src/platform/: linux.rs  windows.rs
rust/crates/sikulix-python/: Cargo.toml
rust/crates/sikulix-python/src/: lib.rs  py_location.rs  py_region.rs
rust/crates/sikulix-remote/: Cargo.toml
rust/crates/sikulix-remote/src/: expect.rs  lib.rs  serial.rs  ssh.rs
rust/crates/sikulix-vision/: Cargo.toml
rust/crates/sikulix-vision/benches/: template_matching.rs
rust/crates/sikulix-vision/src/: finder.rs  image_loader.rs  lib.rs  mat_wrapper.rs  matcher.rs  ocr.rs  resize.rs
rust/crates/sikulix-vision/tests/: image_loading_proptest.rs
rust/docs/: OPENCV_SETUP.md
rust/python/sikulix/: __init__.py  _native.pyi  cli.py
rust/python/tests/: __init__.py  test_location.py  test_region.py
