[package]
name = "sikulix-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for SikuliX - platform-agnostic automation primitives"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
opencv = { workspace = true, optional = true }

[features]
default = []
opencv = ["dep:opencv"]

[dev-dependencies]
