[package]
name = "sikulix-platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-specific screen capture and input automation for SikuliX"

[dependencies]
sikulix-core = { path = "../sikulix-core" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
xcb = "1.2"

[dev-dependencies]
